Fix wrapping problems on code blocks

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -99,6 +99,7 @@ li {
 pre {
   border-radius: 0px;
   border: none;
+  word-wrap: normal;
 }
 
 ul {
@@ -532,8 +533,7 @@ form.search {
 .syntaxify {
   padding: 0px;
   background-color: transparent;
-  white-space: pre;
-  overflow-x: scroll;
+  word-wrap: normal
 }
 
 .ac-result-link:hover {
@@ -1662,6 +1662,10 @@ p.example-instructions {
   pre, .syntaxify {
     background-color: @code-bg;
     padding: 20px;
+  }
+
+  h2 {
+    border-bottom: solid #ddd 2px;
   }
 
   h3 {
